# end_to_end-Data-Engineering

./: .gitignore  README.md  pyproject.toml
airflow/dags/: ingest_data.py
dbtproject/: dbt_project.yml
dbtproject/models/: model.sql
dbtproject/models/staging/: schema.yml  stg_green_data.sql  stg_yellow_data.sql
instrucoes/: conclusao.md  dags.md  dbt.md  destroy.md  docker_airflow.md  google-cloud.md  poetry.md  terraform.md
terraform/: main.tf  terraform.tfstate.backup  variable.tf
